# cldwlk-challenge

./: .env.dev  .env.example  .gitignore  README.md  docker-compose.dev.yaml  docker-compose.yaml  init_db.sh
credit-manager/: .env.dev  Dockerfile  api.py  docker-compose.dev.yaml  health_check.py  pyproject.toml  workers.py
credit-manager/app/: circuit_breakers.py  config.py  database.py  logger.py
credit-manager/services/: __init__.py  credit_analysis.py  credit_request.py  financial_transaction.py  health_check.py  kafka_worker.py
credit-manager/tasks/: __init__.py  health_check.py  notify_credit_request.py  process_credit_request.py  process_financial_transaction.py
docs/: CREDIT_MANAGER.md  EMOTION_PROCESSOR.md  PUBLIC_GATEWAY.md  SQL.md
emotion-processor/: .env.dev  .env.example  api.py  docker-compose.dev.yaml  docker-compose.yaml  health_check.py  pyproject.toml  workers.py
public-gateway/: .env.dev  .env.example  alembic.ini  api.py  docker-compose.dev.yaml  health_check.py  pyproject.toml
public-gateway/app/: config.py  database.py  logger.py
public-gateway/app/alembic/versions/: 0e0680d62df6_add_indexes.py  c7d9212fa2a9_initial_rev.py
public-gateway/data/enums/: __init__.py  credit_loan.py  emotion.py  financial.py
public-gateway/data/models/: __init__.py  user.py  user_metadata.py
public-gateway/data/schemas/: __init__.py  credit.py  emotion.py  financial_transaction.py  user.py  user_metadata_schema.py
public-gateway/services/: __init__.py  credit.py  emotion.py  financial_transaction.py  health_check.py  user.py
(+56 files in other folders)
